--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Digital clock</title>
 </head>
 <body>
-    <div id="myClockDisplay" onload=""></div>
+    <div id="myClockDisplay" onload="showTime()"></div>
+    <div>
+        <button id="themeToggle" onclick="toggleTheme()">Dark mode</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
